# atelierCAP

./: __main__.py  app.py  cert.pem  client.py  dbUtils.py  encryptClass.py  interact.py  key.pem  localhost.crt  localhost.key  server.py  users
biometry/: CMakeLists.txt  atelier.cpp
doc/: protocol.odp
smartcard/: SCOperators.java  SCPrompt.java  SCTerminal.java  smartCard.java
templates/: application.html  changecard.html  changepass.html  confirmcard.html  confirmchange.html  index.html  register.html  restricted.html
